--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatsapp-sentiment-analysis",
   "version": "1.0.0",
-  "description": "Sentimental Analysis of WhatsApp data using Google Cloud NLP",
+  "description": "Sentimental Analysis of WhatsApp Data",
   "repository": "https://github.com/wingkwong/whatsapp-sentiment-analysis",
   "author": "WONG, Wing Kam <wingkwong.code@gmail.com>",
   "license": "MIT",
@@ -30,10 +30,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
+    "drag-drop": "^4.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
     "morgan": "^1.9.0",
-    "rimraf": "^2.6.2"
+    "multer": "^1.3.0",
+    "rimraf": "^2.6.2",
+    "sentiment": "^5.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
