--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "drag-drop": "^4.1.0",
     "ejs": "^2.6.1",
@@ -37,7 +38,8 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "rimraf": "^2.6.2",
-    "sentiment": "^5.0.0"
+    "sentiment": "^5.0.0",
+    "sqlite3": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
